إطلاق بوابة ولي الأمر بصلاحيات وبيانات ورسائل متكاملة
